--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -1,7 +1,7 @@
 name: Feature Request
 description: Suggest an idea for this project
 title: "[FEATURE]: "
-labels: ["feature"]
+labels: ["enhancement"]
 assignees:
   - RWallan
 body:
@@ -12,7 +12,7 @@ body:
 
         Please follow these instructions, fill every question, and do every step.
   - type: checkboxes
-    id: checks
+    id: feature-checks
     attributes:
       label: First check
       description: Please confirm and check all the following options.
@@ -22,26 +22,26 @@ body:
         - label: I tried to find a similar [issue](https://github.com/RWallan/track-my-attendance/issues)
           required: true
   - type: textarea
-    id: description
+    id: feature-description
     attributes:
       label: Description
       description: Describe what is your idea to the project
     validations:
       required: true
   - type: textarea
-    id: help
+    id: feature-help
     attributes:
       label: Why it will help?
       description: Describe why do you think that your idea will help the project and other users.
     validations:
       required: true
   - type: textarea
-    id: issue
+    id: feature-issue
     attributes:
       label: Is your feature request related to a problem?
       description: Describe what is the problem that you encounter and how this feature will help.
   - type: dropdown
-    id: pr
+    id: feature-pr
     attributes:
       label: Pull Request
       description: You're considering to create a Pull Request implementing this feature? Doesn't have any problem if you don't are considering it.
@@ -51,7 +51,7 @@ body:
     validations:
       required: true
   - type: textarea
-    id: context
+    id: feature-context
     attributes:
       label: Additional Context
       description: Add any additional context information or screenshots you think are useful.
