update: Improving descriptions

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -8,43 +8,43 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks for help to improve the project!
+        Thanks for helping to improve the project!
 
-        Please follow these instructions, fill every question, and do every step.
+        Please follow these instructions, fill out every question, and complete every step.
   - type: checkboxes
     id: feature-checks
     attributes:
-      label: First check
+      label: Checklist
       description: Please confirm and check all the following options.
       options:
-        - label: I added a very description title here.
+        - label: I added a very descriptive title here.
           required: true
-        - label: I tried to find a similar [issue](https://github.com/RWallan/track-my-attendance/issues)
+        - label: I tried to find a similar [issue](https://github.com/RWallan/track-my-attendance/issues).
           required: true
   - type: textarea
     id: feature-description
     attributes:
       label: Description
-      description: Describe what is your idea to the project
+      description: Describe your idea for the project.
     validations:
       required: true
   - type: textarea
     id: feature-help
     attributes:
-      label: Why it will help?
-      description: Describe why do you think that your idea will help the project and other users.
+      label: Why will it help?
+      description: Describe why you think this idea will benefit the project and other users.
     validations:
       required: true
   - type: textarea
     id: feature-issue
     attributes:
       label: Is your feature request related to a problem?
-      description: Describe what is the problem that you encounter and how this feature will help.
+      description: Describe the problem you encountered and how this feature will help.
   - type: dropdown
     id: feature-pr
     attributes:
       label: Pull Request
-      description: You're considering to create a Pull Request implementing this feature? Doesn't have any problem if you don't are considering it.
+      description: Are you considering creating a Pull Request to implement this feature? It’s okay if you are not considering it at this moment.
       options:
         - Yes
         - No
@@ -54,4 +54,4 @@ body:
     id: feature-context
     attributes:
       label: Additional Context
-      description: Add any additional context information or screenshots you think are useful.
+      description: Add any additional context or screenshots that you think are useful.
