chore: email validator and pwdlib
- Pydantic will use email validator to validate users emails
- pwdlib will hash the users passwords

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,6 +22,8 @@ fastapi = "^0.114.1"
 sqlalchemy = "^2.0.34"
 alembic = "^1.13.2"
 pydantic-settings = "^2.5.2"
+pydantic = {extras = ["email"], version = "^2.9.1"}
+pwdlib = {extras = ["argon2"], version = "^0.2.1"}
 
 
 [tool.poetry.group.dev.dependencies]
