--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -32,6 +32,7 @@ pytest = "^8.3.3"
 pytest-cov = "^5.0.0"
 ruff = "^0.6.4"
 httpx = "^0.27.2"
+factory-boy = "^3.3.1"
 
 [build-system]
 requires = ["poetry-core"]
