feat: Encode/Decode JWT Token

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,7 @@ alembic = "^1.13.2"
 pydantic-settings = "^2.5.2"
 pydantic = {extras = ["email"], version = "^2.9.1"}
 pwdlib = {extras = ["argon2"], version = "^0.2.1"}
+pyjwt = "^2.9.0"
 
 
 [tool.poetry.group.dev.dependencies]
