--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -35,6 +35,7 @@ pytest-cov = "^5.0.0"
 ruff = "^0.6.4"
 httpx = "^0.27.2"
 factory-boy = "^3.3.1"
+freezegun = "^1.5.1"
 
 [build-system]
 requires = ["poetry-core"]
